--- a/FIC/stvqa/stvqa.ipynb
+++ b/FIC/stvqa/stvqa.ipynb
@@ -2,250 +2,112 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d75c08ed-0a38-4a8f-9a75-8ed229f27b21",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2024-09-17 08:37:00--  https://datasets.cvc.uab.es/rrc/ST-VQA.tar.gz\n",
-      "Resolving datasets.cvc.uab.es (datasets.cvc.uab.es)... 158.109.8.18\n",
-      "Connecting to datasets.cvc.uab.es (datasets.cvc.uab.es)|158.109.8.18|:443... connected.\n",
-      "WARNING: cannot verify datasets.cvc.uab.es's certificate, issued by ‘CN=GEANT OV RSA CA 4,O=GEANT Vereniging,C=NL’:\n",
-      "  Unable to locally verify the issuer's authority.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 2022947497 (1.9G) [application/x-gzip]\n",
-      "Saving to: ‘ST-VQA.tar.gz’\n",
-      "\n",
-      "ST-VQA.tar.gz       100%[===================>]   1.88G  4.56MB/s    in 26m 51s \n",
-      "\n",
-      "2024-09-17 09:03:51 (1.20 MB/s) - ‘ST-VQA.tar.gz’ saved [2022947497/2022947497]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!wget -c https://datasets.cvc.uab.es/rrc/ST-VQA.tar.gz --no-check-certificate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3559caac-2fff-4f44-8a38-de8c38546f2c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2024-09-17 09:34:43--  https://datasets.cvc.uab.es/rrc/train_task_1.json\n",
-      "Resolving datasets.cvc.uab.es (datasets.cvc.uab.es)... 158.109.8.18\n",
-      "Connecting to datasets.cvc.uab.es (datasets.cvc.uab.es)|158.109.8.18|:443... connected.\n",
-      "WARNING: cannot verify datasets.cvc.uab.es's certificate, issued by ‘CN=GEANT OV RSA CA 4,O=GEANT Vereniging,C=NL’:\n",
-      "  Unable to locally verify the issuer's authority.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 34277742 (33M) [application/json]\n",
-      "Saving to: ‘train_task_1.json’\n",
-      "\n",
-      "train_task_1.json   100%[===================>]  32.69M  3.45MB/s    in 19s     \n",
-      "\n",
-      "2024-09-17 09:35:03 (1.69 MB/s) - ‘train_task_1.json’ saved [34277742/34277742]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!wget https://datasets.cvc.uab.es/rrc/train_task_1.json --no-check-certificate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "b9087723-d7b1-4b72-b78d-d993aea464cc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2024-09-17 09:35:15--  https://datasets.cvc.uab.es/rrc/train_task_2.json\n",
-      "Resolving datasets.cvc.uab.es (datasets.cvc.uab.es)... 158.109.8.18\n",
-      "Connecting to datasets.cvc.uab.es (datasets.cvc.uab.es)|158.109.8.18|:443... connected.\n",
-      "WARNING: cannot verify datasets.cvc.uab.es's certificate, issued by ‘CN=GEANT OV RSA CA 4,O=GEANT Vereniging,C=NL’:\n",
-      "  Unable to locally verify the issuer's authority.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 9824677 (9.4M) [application/json]\n",
-      "Saving to: ‘train_task_2.json’\n",
-      "\n",
-      "train_task_2.json   100%[===================>]   9.37M  1.70MB/s    in 12s     \n",
-      "\n",
-      "2024-09-17 09:35:28 (788 KB/s) - ‘train_task_2.json’ saved [9824677/9824677]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!wget https://datasets.cvc.uab.es/rrc/train_task_2.json --no-check-certificate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "398b79d4-08ea-4bf7-a541-cf266934c2f4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2024-09-17 09:35:30--  https://datasets.cvc.uab.es/rrc/train_task_3.json\n",
-      "Resolving datasets.cvc.uab.es (datasets.cvc.uab.es)... 158.109.8.18\n",
-      "Connecting to datasets.cvc.uab.es (datasets.cvc.uab.es)|158.109.8.18|:443... connected.\n",
-      "WARNING: cannot verify datasets.cvc.uab.es's certificate, issued by ‘CN=GEANT OV RSA CA 4,O=GEANT Vereniging,C=NL’:\n",
-      "  Unable to locally verify the issuer's authority.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 9531717 (9.1M) [application/json]\n",
-      "Saving to: ‘train_task_3.json’\n",
-      "\n",
-      "train_task_3.json   100%[===================>]   9.09M  1.29MB/s    in 14s     \n",
-      "\n",
-      "2024-09-17 09:35:44 (680 KB/s) - ‘train_task_3.json’ saved [9531717/9531717]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!wget https://datasets.cvc.uab.es/rrc/train_task_3.json --no-check-certificate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "4a9cf45b-a0d4-4a93-899e-e015d355c791",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2024-09-17 09:35:47--  https://datasets.cvc.uab.es/rrc/test_task1_imgs.tar.gz\n",
-      "Resolving datasets.cvc.uab.es (datasets.cvc.uab.es)... 158.109.8.18\n",
-      "Connecting to datasets.cvc.uab.es (datasets.cvc.uab.es)|158.109.8.18|:443... connected.\n",
-      "WARNING: cannot verify datasets.cvc.uab.es's certificate, issued by ‘CN=GEANT OV RSA CA 4,O=GEANT Vereniging,C=NL’:\n",
-      "  Unable to locally verify the issuer's authority.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 327826791 (313M) [application/x-gzip]\n",
-      "Saving to: ‘test_task1_imgs.tar.gz’\n",
-      "\n",
-      "test_task1_imgs.tar 100%[===================>] 312.64M   870KB/s    in 3m 57s  \n",
-      "\n",
-      "2024-09-17 09:39:45 (1.32 MB/s) - ‘test_task1_imgs.tar.gz’ saved [327826791/327826791]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!wget -c https://datasets.cvc.uab.es/rrc/test_task1_imgs.tar.gz --no-check-certificate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "e0bb49db-61d8-46ab-99b6-b55677c31f0b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2024-09-17 09:44:21--  https://datasets.cvc.uab.es/rrc/test_task2_imgs.tar.gz\n",
-      "Resolving datasets.cvc.uab.es (datasets.cvc.uab.es)... 158.109.8.18\n",
-      "Connecting to datasets.cvc.uab.es (datasets.cvc.uab.es)|158.109.8.18|:443... connected.\n",
-      "WARNING: cannot verify datasets.cvc.uab.es's certificate, issued by ‘CN=GEANT OV RSA CA 4,O=GEANT Vereniging,C=NL’:\n",
-      "  Unable to locally verify the issuer's authority.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 327962719 (313M) [application/x-gzip]\n",
-      "Saving to: ‘test_task2_imgs.tar.gz’\n",
-      "\n",
-      "test_task2_imgs.tar 100%[===================>] 312.77M  6.27MB/s    in 77s     \n",
-      "\n",
-      "2024-09-17 09:45:38 (4.08 MB/s) - ‘test_task2_imgs.tar.gz’ saved [327962719/327962719]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!wget -c https://datasets.cvc.uab.es/rrc/test_task2_imgs.tar.gz --no-check-certificate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "cd74dc0f-e3cd-481f-bb4c-90e0adc336e6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2024-09-17 09:46:10--  https://datasets.cvc.uab.es/rrc/test_task3_imgs.tar.gz\n",
-      "Resolving datasets.cvc.uab.es (datasets.cvc.uab.es)... 158.109.8.18\n",
-      "Connecting to datasets.cvc.uab.es (datasets.cvc.uab.es)|158.109.8.18|:443... connected.\n",
-      "WARNING: cannot verify datasets.cvc.uab.es's certificate, issued by ‘CN=GEANT OV RSA CA 4,O=GEANT Vereniging,C=NL’:\n",
-      "  Unable to locally verify the issuer's authority.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 324401443 (309M) [application/x-gzip]\n",
-      "Saving to: ‘test_task3_imgs.tar.gz’\n",
-      "\n",
-      "test_task3_imgs.tar 100%[===================>] 309.37M  4.10MB/s    in 80s     \n",
-      "\n",
-      "2024-09-17 09:47:31 (3.85 MB/s) - ‘test_task3_imgs.tar.gz’ saved [324401443/324401443]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!wget -c https://datasets.cvc.uab.es/rrc/test_task3_imgs.tar.gz --no-check-certificate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "11dfd07f-b568-4c3c-8b4a-5b686aa5f867",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--2024-09-17 09:49:24--  https://datasets.cvc.uab.es/rrc/test_task_1.json\n",
-      "Resolving datasets.cvc.uab.es (datasets.cvc.uab.es)... 158.109.8.18\n",
-      "Connecting to datasets.cvc.uab.es (datasets.cvc.uab.es)|158.109.8.18|:443... connected.\n",
-      "WARNING: cannot verify datasets.cvc.uab.es's certificate, issued by ‘CN=GEANT OV RSA CA 4,O=GEANT Vereniging,C=NL’:\n",
-      "  Unable to locally verify the issuer's authority.\n",
-      "HTTP request sent, awaiting response... 200 OK\n",
-      "Length: 5275277 (5.0M) [application/json]\n",
-      "Saving to: ‘test_task_1.json’\n",
-      "\n",
-      "test_task_1.json    100%[===================>]   5.03M   839KB/s    in 11s     \n",
-      "\n",
-      "2024-09-17 09:49:36 (483 KB/s) - ‘test_task_1.json’ saved [5275277/5275277]\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!wget https://datasets.cvc.uab.es/rrc/test_task_1.json --no-check-certificate"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "bac78d6c-b00b-4238-9323-0b15a22c362a",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0b1e62c-db6a-4225-b4a6-6be74ea0243b",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "---"
+    "!wget https://datasets.cvc.uab.es/rrc/test_task_2.json --no-check-certificate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "058027eb-c29a-41c0-86ce-3f61963af9cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://datasets.cvc.uab.es/rrc/test_task_3.json --no-check-certificate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7c5ee65-bf01-4cb7-844d-1b2e07164cd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!mkdir ST-VQA && tar -xzf ST-VQA.tar.gz -C ST-VQA"
    ]
   },
   {
@@ -255,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mkdir task1 && tar -xzf test_task1_imgs.tar.gz -C task1"
+    "!mkdir test_task1_imgs && tar -xzf test_task1_imgs.tar.gz -C test_task1_imgs"
    ]
   },
   {
@@ -265,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mkdir task2 && tar -xzf test_task2_imgs.tar.gz -C task2"
+    "!mkdir test_task2_imgs && tar -xzf test_task2_imgs.tar.gz -C test_task2_imgs"
    ]
   },
   {
@@ -275,167 +137,198 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!mkdir task3 && tar -xzf test_task3_imgs.tar.gz -C task3"
+    "!mkdir test_task3_imgs && tar -xzf test_task3_imgs.tar.gz -C test_task3_imgs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "5d555461-8af1-4aeb-aee5-f2142191fcb2",
+   "execution_count": 48,
+   "id": "1e6bd288-ee75-45d8-b348-565682bea6b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json"
+    "import io\n",
+    "import os\n",
+    "import PIL\n",
+    "import json\n",
+    "from datasets import Dataset, Image\n",
+    "from glob import glob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "1e10692a-0543-4513-a0b5-e5c8c79cbf84",
+   "execution_count": 59,
+   "id": "28596879-5689-4d48-baee-4cf56eaa9d3d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('test_task_1.json', 'r') as f:\n",
-    "    data = json.load(f)"
+    "splits = [\n",
+    "    'train',\n",
+    "    'test'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3e5b44a-50d8-4bc8-a3f8-3f49a70e0be7",
+   "metadata": {},
+   "source": [
+    "## Task 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "2bbc054b-cdec-4167-a517-8ef65d44b224",
+   "execution_count": 68,
+   "id": "54215d2c-6e8c-497b-9891-806eefa64a4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "task = 1\n",
+    "stvqa_task1 = []\n",
+    "for i_split, split in enumerate(splits):\n",
+    "    path = []\n",
+    "    question = []\n",
+    "    dictionary = []\n",
+    "    answer = []\n",
+    "    with open(f\"{split}_task_{task}.json\", 'r') as f:\n",
+    "        data = json.load(f)['data']\n",
+    "    for sample in data:\n",
+    "        path.append(f\"ST-VQA/{sample['file_path']}\")\n",
+    "        question.append(sample['question'])\n",
+    "        dictionary.append(sample['dictionary'])\n",
+    "        if i_split == 1:\n",
+    "            answer.append([\"Test server is available at rrc.cvc.uab.es\"])\n",
+    "        else:\n",
+    "            answer.append(sample['answers'])\n",
+    "    stvqa_task1.append(Dataset.from_dict({\n",
+    "        'path':path,\n",
+    "        'question':question,\n",
+    "        'dictionary':dictionary,\n",
+    "        'answer':answer\n",
+    "    }))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "d03a224b-8e64-4aeb-9e95-86f45c0b9bde",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'set_name': 'test',\n",
-       " 'dictionary': ['much',\n",
-       "  'image',\n",
-       "  'political',\n",
-       "  '3',\n",
-       "  'season',\n",
-       "  'large',\n",
-       "  'great',\n",
-       "  'house',\n",
-       "  'racing',\n",
-       "  'driver',\n",
-       "  'battle',\n",
-       "  'four',\n",
-       "  'ret',\n",
-       "  'germany',\n",
-       "  'still',\n",
-       "  'tank',\n",
-       "  'national',\n",
-       "  'began',\n",
-       "  'back',\n",
-       "  'championship',\n",
-       "  'soviet',\n",
-       "  'school',\n",
-       "  'now',\n",
-       "  'event',\n",
-       "  'book',\n",
-       "  'use',\n",
-       "  'area',\n",
-       "  'von',\n",
-       "  'king',\n",
+       "{'path': 'ST-VQA/coco-text/COCO_train2014_000000347021.jpg',\n",
+       " 'question': 'What is the book authors first name?',\n",
+       " 'dictionary': ['john',\n",
        "  'around',\n",
-       "  'french',\n",
-       "  'system',\n",
-       "  'took',\n",
-       "  'schiller',\n",
-       "  'film',\n",
-       "  'march',\n",
-       "  'long',\n",
-       "  'last',\n",
-       "  'varreorc',\n",
-       "  'number',\n",
-       "  'samoa',\n",
-       "  'british',\n",
-       "  'line',\n",
-       "  'france',\n",
-       "  'john',\n",
-       "  'power',\n",
-       "  'moscow',\n",
-       "  'afr',\n",
-       "  'order',\n",
-       "  'university',\n",
-       "  'place',\n",
+       "  'still',\n",
+       "  'bridge',\n",
+       "  'began',\n",
        "  'country',\n",
+       "  'century',\n",
+       "  'susan',\n",
+       "  'germany',\n",
+       "  'general',\n",
+       "  'service',\n",
+       "  'end',\n",
+       "  'building',\n",
        "  'several',\n",
-       "  'left',\n",
-       "  'group',\n",
+       "  'long',\n",
+       "  'use',\n",
+       "  'museum',\n",
+       "  'train',\n",
+       "  'glenda',\n",
+       "  'school',\n",
+       "  'often',\n",
+       "  'image',\n",
+       "  'main',\n",
+       "  'force',\n",
+       "  'major',\n",
+       "  'national',\n",
+       "  'star',\n",
+       "  'south',\n",
+       "  'sharie',\n",
+       "  'near',\n",
+       "  'blackmore',\n",
+       "  'island',\n",
+       "  'town',\n",
+       "  'four',\n",
        "  'form',\n",
-       "  'car',\n",
-       "  'result',\n",
-       "  'military',\n",
+       "  'will',\n",
+       "  'like',\n",
+       "  'river',\n",
+       "  'second',\n",
+       "  'although',\n",
+       "  'air',\n",
+       "  'united',\n",
        "  'people',\n",
        "  'high',\n",
-       "  'led',\n",
-       "  'will',\n",
-       "  'even',\n",
-       "  'since',\n",
-       "  'force',\n",
-       "  'family',\n",
-       "  'life',\n",
-       "  'member',\n",
-       "  'like',\n",
-       "  'general',\n",
-       "  'party',\n",
-       "  'series',\n",
-       "  'cote',\n",
-       "  'united',\n",
-       "  'hartford',\n",
-       "  'following',\n",
-       "  '0',\n",
-       "  'another',\n",
-       "  'although',\n",
-       "  'point',\n",
-       "  'american',\n",
-       "  'often',\n",
-       "  'north',\n",
-       "  'international',\n",
-       "  'death',\n",
-       "  'ctn',\n",
-       "  'army',\n",
-       "  'service',\n",
-       "  'formula',\n",
-       "  'won',\n",
-       "  'roman',\n",
-       "  'grand',\n",
-       "  'major',\n",
        "  'right',\n",
-       "  'athens',\n",
-       "  'south',\n",
-       "  'prix',\n",
-       "  'end',\n",
-       "  'miksik'],\n",
-       " 'file_name': '2346109.jpg',\n",
-       " 'question': 'What is printed on the top line of the hoodie?',\n",
-       " 'image_width': 500,\n",
-       " 'dataset': 'VisualGenome/1',\n",
-       " 'question_tokens': ['What',\n",
-       "  'is',\n",
-       "  'printed',\n",
-       "  'on',\n",
-       "  'the',\n",
-       "  'top',\n",
-       "  'line',\n",
-       "  'of',\n",
-       "  'the',\n",
-       "  'hoodie',\n",
-       "  '?'],\n",
-       " 'image_height': 329,\n",
-       " 'file_path': 'VisualGenome/1/2346109.jpg',\n",
-       " 'question_id': 3}"
+       "  'last',\n",
+       "  'side',\n",
+       "  'point',\n",
+       "  'german',\n",
+       "  'american',\n",
+       "  'car',\n",
+       "  'park',\n",
+       "  'number',\n",
+       "  'government',\n",
+       "  'french',\n",
+       "  'mitzi',\n",
+       "  'march',\n",
+       "  'east',\n",
+       "  'group',\n",
+       "  'land',\n",
+       "  'found',\n",
+       "  'site',\n",
+       "  'series',\n",
+       "  'west',\n",
+       "  'france',\n",
+       "  'team',\n",
+       "  'following',\n",
+       "  'built',\n",
+       "  'army',\n",
+       "  'king',\n",
+       "  'company',\n",
+       "  'based',\n",
+       "  'university',\n",
+       "  'great',\n",
+       "  'member',\n",
+       "  'water',\n",
+       "  'day',\n",
+       "  'place',\n",
+       "  'left',\n",
+       "  'party',\n",
+       "  'life',\n",
+       "  'order',\n",
+       "  'house',\n",
+       "  'system',\n",
+       "  'even',\n",
+       "  'international',\n",
+       "  'due',\n",
+       "  'power',\n",
+       "  'military',\n",
+       "  'small',\n",
+       "  'race',\n",
+       "  'large',\n",
+       "  'population',\n",
+       "  'now',\n",
+       "  'region',\n",
+       "  'wandie',\n",
+       "  'north',\n",
+       "  'since',\n",
+       "  'work',\n",
+       "  'british'],\n",
+       " 'answer': ['Susan']}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data['data'][0]"
+    "stvqa_task1[0][0]"
    ]
   }
  ],
